syntax = "proto3";
package paw.dex.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "paw/dex/v1/dex.proto";

option go_package = "github.com/paw-chain/paw/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of the dex module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/paw/dex/v1/params";
  }

  // Pool queries a pool by ID
  rpc Pool(QueryPoolRequest) returns (QueryPoolResponse) {
    option (google.api.http).get = "/paw/dex/v1/pools/{pool_id}";
  }

  // Pools queries all pools
  rpc Pools(QueryPoolsRequest) returns (QueryPoolsResponse) {
    option (google.api.http).get = "/paw/dex/v1/pools";
  }

  // PoolByTokens queries a pool by token pair
  rpc PoolByTokens(QueryPoolByTokensRequest) returns (QueryPoolByTokensResponse) {
    option (google.api.http).get = "/paw/dex/v1/pools/by-tokens/{token_a}/{token_b}";
  }

  // Liquidity queries a user's liquidity in a pool
  rpc Liquidity(QueryLiquidityRequest) returns (QueryLiquidityResponse) {
    option (google.api.http).get = "/paw/dex/v1/liquidity/{pool_id}/{provider}";
  }

  // SimulateSwap simulates a swap without executing it
  rpc SimulateSwap(QuerySimulateSwapRequest) returns (QuerySimulateSwapResponse) {
    option (google.api.http).get = "/paw/dex/v1/simulate-swap/{pool_id}";
  }

  // LimitOrder queries a limit order by ID
  rpc LimitOrder(QueryLimitOrderRequest) returns (QueryLimitOrderResponse) {
    option (google.api.http).get = "/paw/dex/v1/limit-orders/{order_id}";
  }

  // LimitOrders queries all limit orders with pagination
  rpc LimitOrders(QueryLimitOrdersRequest) returns (QueryLimitOrdersResponse) {
    option (google.api.http).get = "/paw/dex/v1/limit-orders";
  }

  // LimitOrdersByOwner queries limit orders by owner address
  rpc LimitOrdersByOwner(QueryLimitOrdersByOwnerRequest) returns (QueryLimitOrdersByOwnerResponse) {
    option (google.api.http).get = "/paw/dex/v1/limit-orders/owner/{owner}";
  }

  // LimitOrdersByPool queries limit orders by pool ID
  rpc LimitOrdersByPool(QueryLimitOrdersByPoolRequest) returns (QueryLimitOrdersByPoolResponse) {
    option (google.api.http).get = "/paw/dex/v1/limit-orders/pool/{pool_id}";
  }

  // OrderBook queries the order book for a pool
  rpc OrderBook(QueryOrderBookRequest) returns (QueryOrderBookResponse) {
    option (google.api.http).get = "/paw/dex/v1/order-book/{pool_id}";
  }

  // FindBestRoute finds the optimal multi-hop route between two tokens (AGENT-3)
  rpc FindBestRoute(QueryFindBestRouteRequest) returns (QueryFindBestRouteResponse) {
    option (google.api.http).get = "/paw/dex/v1/routes/find";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryPoolRequest is the request type for the Query/Pool RPC method.
message QueryPoolRequest {
  uint64 pool_id = 1;
}

// QueryPoolResponse is the response type for the Query/Pool RPC method.
message QueryPoolResponse {
  Pool pool = 1 [(gogoproto.nullable) = false];
}

// QueryPoolsRequest is the request type for the Query/Pools RPC method.
message QueryPoolsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryPoolsResponse is the response type for the Query/Pools RPC method.
message QueryPoolsResponse {
  repeated Pool pools = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPoolByTokensRequest is the request type for the Query/PoolByTokens RPC method.
message QueryPoolByTokensRequest {
  string token_a = 1;
  string token_b = 2;
}

// QueryPoolByTokensResponse is the response type for the Query/PoolByTokens RPC method.
message QueryPoolByTokensResponse {
  Pool pool = 1 [(gogoproto.nullable) = false];
}

// QueryLiquidityRequest is the request type for the Query/Liquidity RPC method.
message QueryLiquidityRequest {
  uint64 pool_id = 1;
  string provider = 2;
}

// QueryLiquidityResponse is the response type for the Query/Liquidity RPC method.
message QueryLiquidityResponse {
  string shares = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// QuerySimulateSwapRequest is the request type for the Query/SimulateSwap RPC method.
message QuerySimulateSwapRequest {
  uint64 pool_id = 1;
  string token_in = 2;
  string token_out = 3;
  string amount_in = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// QuerySimulateSwapResponse is the response type for the Query/SimulateSwap RPC method.
message QuerySimulateSwapResponse {
  string amount_out = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// QueryLimitOrderRequest is the request type for the Query/LimitOrder RPC method.
message QueryLimitOrderRequest {
  uint64 order_id = 1;
}

// QueryLimitOrderResponse is the response type for the Query/LimitOrder RPC method.
message QueryLimitOrderResponse {
  LimitOrder order = 1 [(gogoproto.nullable) = false];
}

// QueryLimitOrdersRequest is the request type for the Query/LimitOrders RPC method.
message QueryLimitOrdersRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryLimitOrdersResponse is the response type for the Query/LimitOrders RPC method.
message QueryLimitOrdersResponse {
  repeated LimitOrder orders = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryLimitOrdersByOwnerRequest is the request type for the Query/LimitOrdersByOwner RPC method.
message QueryLimitOrdersByOwnerRequest {
  string owner = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryLimitOrdersByOwnerResponse is the response type for the Query/LimitOrdersByOwner RPC method.
message QueryLimitOrdersByOwnerResponse {
  repeated LimitOrder orders = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryLimitOrdersByPoolRequest is the request type for the Query/LimitOrdersByPool RPC method.
message QueryLimitOrdersByPoolRequest {
  uint64 pool_id = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryLimitOrdersByPoolResponse is the response type for the Query/LimitOrdersByPool RPC method.
message QueryLimitOrdersByPoolResponse {
  repeated LimitOrder orders = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryOrderBookRequest is the request type for the Query/OrderBook RPC method.
message QueryOrderBookRequest {
  uint64 pool_id = 1;
  uint32 limit = 2;  // Maximum number of orders per side (default 50)
}

// QueryOrderBookResponse is the response type for the Query/OrderBook RPC method.
message QueryOrderBookResponse {
  repeated LimitOrder buy_orders = 1 [(gogoproto.nullable) = false];
  repeated LimitOrder sell_orders = 2 [(gogoproto.nullable) = false];
}

// QueryFindBestRouteRequest is the request type for the Query/FindBestRoute RPC method.
// AGENT-3: Exposes multi-hop route finding for agents and clients.
message QueryFindBestRouteRequest {
  string token_in = 1;   // Source token denom
  string token_out = 2;  // Destination token denom
  string amount_in = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  uint32 max_hops = 4;   // Maximum number of hops (default 3, max 5)
}

// RouteHop represents a single hop in a multi-hop route.
message RouteHop {
  uint64 pool_id = 1;
  string token_in = 2;
  string token_out = 3;
  string amount_in = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string amount_out = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// QueryFindBestRouteResponse is the response type for the Query/FindBestRoute RPC method.
message QueryFindBestRouteResponse {
  repeated RouteHop route = 1 [(gogoproto.nullable) = false];
  string total_amount_out = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string total_fee = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  bool found = 4;  // Whether a valid route was found
}
